# qt5-cmake-template

./: CMakeLists.txt  README.md  main.cxx  mainwindow.cxx  mainwindow.h  mainwindow.ui  resources.qrc  style.qss
